--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -5,9 +5,13 @@
     </HEAD>
     <BODY>
 
-	{% if id and state_ids and (id in state_ids) %}
-		{% for state in states|sort(attribute='name') %}
+	{% set ns = namespace(found=false) %}
+	
+	{% if id %}
+
+		{% for state in states %}
 			{% if id == state.id %}
+				{% set ns.found = true %}
 				<H1>State: {{ state.name }}</H1>
 				<H3>Cities:</H3>
 				<UL>
@@ -17,10 +21,11 @@
 				</UL>
 			{% endif %}
 		{% endfor %}
-	{% endif %}
 
-	{% if id and state_ids and (id not in state_ids) %}
-		<H1>Not found!</H1>
+		{% if not ns.found %}
+			<H1>Not found!</H1>
+		{% endif %}
+
 	{% endif %}
 
 
